Fix spacing and add padding

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,6 @@ h1 {
 .back {
   background-color: #fff;
   border-radius: 2em 0;
-  padding: 1em 0;
 }
 
 .abril {
@@ -45,6 +44,7 @@ h1 {
 }
 
 @media only screen and (min-width: 38em) {
+
   html {
     color: #fff;
   }
@@ -56,11 +56,12 @@ h1 {
   .back {
     background-color: #2c1622;
     border-radius: 2em 0;
-    padding: 1em 0;
   }
+
 }
 
 @media only screen and (min-width: 60em) {
+
   html {
     color: #000;
   }
@@ -72,12 +73,11 @@ h1 {
   .back {
     background-color: #fff;
     border-radius: 2em 0;
-    padding: 1em 0;
   }
 
   h1 {
     background-color: #2c1622;
     color: #fff;
-    padding-bottom: .2em;
   }
+
 }
